--- a/ansible/roles/slingshot_default_packages/tasks/main.yml
+++ b/ansible/roles/slingshot_default_packages/tasks/main.yml
@@ -5,4 +5,32 @@
     - cl-base64
     - coreutils
     - curl
-
+    - expect
+    - firefox
+    - ftp
+    - gawk
+    - gcc
+    - gdb
+    - gedit
+    - git
+    - hping3
+    - iputils-ping
+    - jq
+    - libssl-dev
+    - lsof
+    - mate-tweak
+    - net-tools
+    - netcat
+    - nmap
+    - openvpn
+    - openvpn-systemd-resolved
+    - psmisc
+    - python3
+    - python3-pip
+    - smbclient
+    - tcpdump
+    - unzip
+    - wapiti
+    - wireshark
+    - whois
+    - xterm
